handled FindBugs warnings